--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins';
+    font-family: 'Monserratt';
 }
 
 body{
 background: #fff;
 }
+
